# ffgl-playground

./: .gitignore  .gitmodules  CMakeLists.txt  FFGL Notes.md  Makefile  README.md  config.h.in
cmake/: utils.cmake
lib/: CMakeLists.txt
lib/ffglplayground/: Playground.cpp  Playground.h
lib/lib/: example.h
plugins/Gradients.bundle/Contents/: Info.plist
plugins/Gradients.bundle/Contents/MacOS/: Gradients
plugins/SpiderPoints.bundle/Contents/: Info.plist
plugins/SpiderPoints.bundle/Contents/MacOS/: SpiderPoints
src/: CMakeLists.txt  Projects.cmake  main.cpp  pch.cpp
src/Gradients/: CMakeLists.txt
src/SpiderPoints/: AnimatedAttribute.cpp  AnimatedAttribute.hpp  AnimatedPoint.cpp  AnimatedPoint.hpp  FFGL Notes.md  Mesh.cpp  Mesh.h  SpiderPoints.cpp  SpiderPoints.h  Utils.cpp  Utils.h
src/examples/: README.md
src/examples/AddSubtract/: AddSubtract.cpp
src/playground/: CMakeLists.txt  playground.cpp
